--- a/src/app/login/mfaOTP/mfaOTP.component.html
+++ b/src/app/login/mfaOTP/mfaOTP.component.html
@@ -44,7 +44,7 @@
 
         <div class="d-flex flex-column text-center">
           <div *ngIf="loading" class="spinner mb-2 text-center" style="margin-left: 50%;"></div> 
-          <a routerLink="" class="text-center">Cancel</a>
+          <a routerLink="" class="text-center " style="margin-left: 20px;">Cancel</a>
         </div>
 
       </div>
