--- a/src/app/view-employees/edit-details/edit-details.component.html
+++ b/src/app/view-employees/edit-details/edit-details.component.html
@@ -40,7 +40,7 @@
   
       <label style="margin-left:8%;">Effective End Date</label>
   
-      <input type="date" (change)="OnChageeffectiveEndDate($event)" style="margin-left: 8%; " [value]="effectiveEndDate">
+      <input type="date" style="margin-left: 8%; " [value]="effectiveEndDate">
   
     </div>
   
@@ -263,7 +263,7 @@
   
             <div class="d-flex flex-column" style="margin-left: 10%;">
               <label>Effective End Date</label>
-              <input type="date" (change)="onChageEffectiveEmpDate($event)"
+              <input type="date" 
                 class="form-control" style="width: 150%;" >
             </div>
   
