--- a/src/app/otp/reset/reset.component.html
+++ b/src/app/otp/reset/reset.component.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="d-flex flex-row">
-          <button class="btn btn-primary" role="button" type="submit"><span class="text">Submit</span></button>
+          <button class="btn btn-primary" role="button" type="submit" [disabled]="forgotpassword.invalid"><span class="text">Submit</span></button>
           <button routerLink="" class="btn btn-secondary" role="button"><span class="text">Cancel</span></button>
         </div>
         <div class="mt-2">
