--- a/src/app/view-employees/employee-card-display/employee-card-display.component.html
+++ b/src/app/view-employees/employee-card-display/employee-card-display.component.html
@@ -41,13 +41,13 @@
             <div class="employee-details2">
               <p>
                 <span class="material-symbols-outlined">calendar_month</span>
-                <strong>Date of Birth: </strong>{{ employees.EMPLOYEE_DETAILS.DATE_OF_BIRTH | date:'shortDate' }}
+                Date of Birth:&nbsp;<strong> {{ employees.EMPLOYEE_DETAILS.DATE_OF_BIRTH | date:'shortDate' }}</strong>
                 <br>
                 <span class="material-symbols-outlined">home_pin</span>
-                <strong>Work Location: </strong>{{ employees.EMPLOYEE_DETAILS.WORK_LOCATION }}
+                Work Location:&nbsp;<strong> {{ employees.EMPLOYEE_DETAILS.WORK_LOCATION }}</strong>
                 <br>
                 <span class="material-symbols-outlined">mail</span>
-                <strong>Email Address: </strong>{{ employees.EMPLOYEE_DETAILS.EMAIL_ADDRESS }}
+                Email Address:&nbsp;<strong>{{ employees.EMPLOYEE_DETAILS.EMAIL_ADDRESS }} </strong>
               </p>
             </div>
             
