--- a/src/app/view-users/view-users.component.html
+++ b/src/app/view-users/view-users.component.html
@@ -14,7 +14,7 @@
                         <th>User Name</th>
                         <th>Role</th>                        
                         <th>First Name</th>
-                        <th>Last Name</th>
+                        <!-- <th>Last Name</th> -->
                         <th>Email</th>
                         <th>Mobile Number</th>
                         <th>Created By</th>
@@ -28,7 +28,7 @@
                         <td (click)="editUser(data)"  class="click">{{ data.USER_NAME }}</td>
                         <td>{{ data.ROLE }}</td>
                         <td>{{ data.FIRST_NAME }}</td>
-                        <td>{{ data.LAST_NAME }}</td>
+                        <!-- <td>{{ data.LAST_NAME }}</td> -->
                         <td>{{ data.EMAIL }}</td>
                         <td>{{ data.MOBILE_NO }}</td>
                         <td>{{ data.CREATED_BY }}</td>
