--- a/src/app/view-employees/employee-filter/employee-filter.component.css
+++ b/src/app/view-employees/employee-filter/employee-filter.component.css
@@ -8,11 +8,13 @@
     border-radius: 10px;
     padding: 2px;
     padding-left: 5px;
-    width: 300px;    
+    width: 230px; 
 }
+
 
 #applyFilter,
 #removeFilter {
+    margin: 9% 0 0 10%;
     width: 50px;
     height: 40px;
     text-align: center;
@@ -44,11 +46,12 @@
 label {
     font-weight: bold;
     margin-bottom: 1%;
+    margin-left: 3%;
 }
 
 .card {
-  margin-left: 10%;
-    width: 80%;
+  margin-left: 20%;
+    width: 60%;
     border: 1px solid white !important;
     border-radius: none !important;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -56,4 +59,29 @@ label {
 .required-star {
     color: red;
     margin-left: 5px;
+}
+
+
+
+/* Ensure the container is flexbox based */
+.row.d-flex {
+    display: flex;
+    align-items: center; /* Align items vertically centered */
+}
+
+.col-md-4 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 0; /* Remove margin to ensure alignment */
+}
+
+button {
+    flex-shrink: 0; /* Prevent buttons from shrinking */
 }
