--- a/src/app/view-employees/employee-filter/employee-filter.component.html
+++ b/src/app/view-employees/employee-filter/employee-filter.component.html
@@ -5,19 +5,18 @@
 
     <div class="card p-3 ">
         <form (ngSubmit)="onSubmit()">
-            <div class="row mb-3 d-flex flex-row">
-                <div class="col-md-4" style="margin-right: 20px;">
+            <div class="row d-flex flex-row" >
+                <div class="col-md-4 input">
                     <label for="filter1">Search by Number:<span class="required-star">*</span></label>
-                    <input type="text" id="filter1" [(ngModel)]="filterInput" name="filterInput" class="form-control" placeholder="Search Employee/Candidate Number">
+                    <input type="text" id="filter1" [(ngModel)]="filterInput" name="filterInput" class="form-control" placeholder="Employee/Candidate Number">
                 </div>
-
-                <div class="col-md-4">
-                    <label for="empstartDate">Effective start Date:<span class="required-star">*</span></label>
-                    <input type="date"  name="empstartDate" [(ngModel)]="empstartDate" id="empstartDate" class="form-control" (change)="esdDate($event)">
+                
+                <div class="col-md-4 input">
+                    <label for="empstartDate" style="margin-left: 15%;">Effective start Date:<span class="required-star">*</span></label>
+                    <input type="date"  name="empstartDate" [(ngModel)]="empstartDate" id="empstartDate" class="form-control" (change)="esdDate($event)" style="width: 220px;margin-left: 10%;">
                 </div>
-
-                <div class="col-md-4 d-flex align-items-end">
-                    <button type="submit" id="applyFilter" class="btn btn-primary mx-2">
+                <div class="col-md-4 d-flex align-items-center">
+                    <button type="submit" id="applyFilter" class="btn btn-primary mx-2 ">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                     <button type="button" id="removeFilter" class="btn btn-secondary mx-2" (click)="remove()">
