--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -37,7 +37,7 @@
        
         <div class="align-sub">
  
-            <h5 class="mb-4 mt-4">Employee Confirmations :</h5>
+            <h5 class="mb-4 mt-4">Upcoming Employee Confirmations :</h5>
  
             <div>
                
@@ -69,7 +69,7 @@
  
         <div class="align-sub">
  
-            <h5 class="mb-4 mt-4">Probation Completed Employees :</h5>
+            <h5 class="mb-4 mt-4"> Upcoming Probation Completed Employees :</h5>
  
             <div>
                
