--- a/src/app/view-employees/employee-card-display/employee-card-display.component.css
+++ b/src/app/view-employees/employee-card-display/employee-card-display.component.css
@@ -1,65 +1,68 @@
 .img-div {
   margin-top: 2vh;
-  width: 85px; 
+  width: 85px;
   height: 85px;
   border-radius: 50%;
-  text-align: center; 
+  text-align: center;
   background-color: white;
   overflow: hidden;
   display: flex;
-  justify-content: center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
 }
 
 .img-div img {
-  max-width: 100%; 
+  max-width: 100%;
   height: auto;
-  border-radius: 50%; 
+  border-radius: 50%;
 }
-
 
 .main {
   margin-top: 2%;
-  background-color: #F5F5F5;;
+  background-color: #F5F5F5;
   height: 100%;
 }
- 
+
 button.material-icon-button {
   border: none;
   background: none;
   padding: 0;
 }
- 
+
 #idCount {
   font-size: larger;
   font-weight: bolder;
   color: #f21111;
 }
- 
+
 .employee-container {
   margin-top: 4vh;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center; /* Center the cards */
 }
+
 img {
   height: 100px;
   width: 100px;
 }
 
-
 .employee-card {
-  width: calc(22% - 10px);
-  margin-right: 1vw; 
-  margin-left: 1vw;
-  margin-bottom: 30px;
-  border-radius: 10px;
+  width: calc(30% - 20px);
+  height: 280px;
+  margin: 1.5vw;
+  margin-right: 35%;
+  border-radius: 15px;
   overflow: hidden;
-} 
- 
+  position: relative;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: #99d0ff;
+
+}
+
 .employee-details1,
 .employee-details2 {
   font-size: small;
-  height: 25vh;
   display: flex;
   background-color: #99d0ff;
   color: black;
@@ -67,50 +70,68 @@ img {
   justify-content: center;
   align-items: center;
 }
+
 .employee-details2 {
   background-color: #c5f4fe;
-  height: 20vh;
 }
- 
+
 .material-symbols-outlined {
   position: relative;
   top: 0.8vh;
   font-size: 3vh;
   margin-right: 1vw;
 }
- 
+
 .top-right-circles {
   position: absolute;
   display: flex;
   top: 10px;
   right: 10px;
 }
- 
+
 .circle1,
-.circle2
-    {
+.circle2 {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background-color: #c5f4fe;
   margin-left: 5px;
 }
- 
-.employee-card {
-  width: calc(30% - 20px);
-  height: 280px;
-  margin-right: 1.5vw;
-  margin-left: 1.5vw;
-  margin-bottom: 40px;
-  border-radius: 15px;
-  overflow: hidden;
-  position: relative;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+/* Responsive Design */
+
+@media screen and (max-width: 1200px) {
+  .employee-card {
+    width: calc(45% - 20px);
+    height: 250px;
+  }
 }
- 
- 
- 
- 
- 
- 
- 
+
+@media screen and (max-width: 768px) {
+  .employee-card {
+    width: calc(100% - 30px);
+    height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .employee-card {
+    width: 100%;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+
+  .employee-details1,
+  .employee-details2 {
+    font-size: smaller;
+  }
+
+  .material-symbols-outlined {
+    font-size: 2.5vh;
+    margin-right: 0.5vw;
+  }
+}
