--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,8 +5,8 @@
                 <div  style="margin-left:40%;"><img src="../../assets/images/userDP.jpg" alt="HR Dp" class="dp-circle"></div>
 
                 <div class="user-info" style="margin-left: 45%;">
-                    <p><span class="highlight">Name:</span> <span class="p">{{userData.username}}</span></p>
-                    <p><span class="highlight">userId:</span> <span class="p">{{userData.user_id}}</span></p>
+                    <p><span class="highlight">UserName:</span> <span class="p">{{userData.username}}</span></p>
+                    <p><span class="highlight">UserId:</span> <span class="p">{{userData.user_id}}</span></p>
                     <p><span class="highlight">Email:</span> <span class="p">{{userData.email}}</span></p>
                     <p><span class="highlight">Role:</span> <span class="p">{{userData.ROLE}}</span></p>
                 </div>
